--- a/plagdef/gui/ui/home_widget.ui
+++ b/plagdef/gui/ui/home_widget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>configure_widget</class>
-    <widget class="QWidget" name="configure_widget">
+    <class>home_widget</class>
+    <widget class="QWidget" name="home_widget">
         <property name="geometry">
             <rect>
                 <x>0</x>
@@ -93,7 +93,7 @@
                         <string>Find matches</string>
                     </property>
                     <property name="icon">
-                        <iconset resource="resources.qrc">
+                        <iconset resource="../res/resources.qrc">
                             <normaloff>:/search_white.png</normaloff>:/search_white.png
                         </iconset>
                     </property>
@@ -332,7 +332,7 @@
                                 <string>English</string>
                             </property>
                             <property name="icon">
-                                <iconset resource="resources.qrc">
+                                <iconset resource="../res/resources.qrc">
                                     <normaloff>:/uk_flag.png</normaloff>:/uk_flag.png
                                 </iconset>
                             </property>
@@ -368,7 +368,7 @@
                                 <string>German</string>
                             </property>
                             <property name="icon">
-                                <iconset resource="resources.qrc">
+                                <iconset resource="../res/resources.qrc">
                                     <normaloff>:/ger_flag.png</normaloff>:/ger_flag.png
                                 </iconset>
                             </property>
@@ -438,6 +438,19 @@
                             </property>
                         </widget>
                     </item>
+                    <item>
+                        <spacer name="sel_layout_bottom_spacer">
+                            <property name="orientation">
+                                <enum>Qt::Vertical</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                                <size>
+                                    <width>20</width>
+                                    <height>40</height>
+                                </size>
+                            </property>
+                        </spacer>
+                    </item>
                 </layout>
             </item>
             <item row="2" column="0">
@@ -490,7 +503,7 @@
                                 <string>Open folder</string>
                             </property>
                             <property name="icon">
-                                <iconset resource="resources.qrc">
+                                <iconset resource="../res/resources.qrc">
                                     <normaloff>:/folder_open_white.png</normaloff>:/folder_open_white.png
                                 </iconset>
                             </property>
@@ -559,6 +572,19 @@
                                 <bool>true</bool>
                             </property>
                         </widget>
+                    </item>
+                    <item>
+                        <spacer name="folder_layout_bottom_spacer">
+                            <property name="orientation">
+                                <enum>Qt::Vertical</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                                <size>
+                                    <width>20</width>
+                                    <height>40</height>
+                                </size>
+                            </property>
+                        </spacer>
                     </item>
                 </layout>
             </item>
