--- a/plagdef/gui/ui/error_widget.ui
+++ b/plagdef/gui/ui/error_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>152</width>
-                <height>204</height>
+                <width>250</width>
+                <height>270</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -17,7 +17,7 @@
             <string notr="true">background-color: rgb(77, 80, 87);</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
-            <item>
+            <item alignment="Qt::AlignHCenter">
                 <widget class="QLabel" name="error_label">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -43,10 +43,16 @@
             </item>
             <item>
                 <widget class="QLabel" name="error_msg_label">
+                    <property name="frameShape">
+                        <enum>QFrame::NoFrame</enum>
+                    </property>
                     <property name="text">
                         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span
                             style=&quot; font-size:14pt; color:#ffffff;&quot;&gt;{errorMsg}&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
                         </string>
+                    </property>
+                    <property name="wordWrap">
+                        <bool>false</bool>
                     </property>
                 </widget>
             </item>
