--- a/plagdef/gui/ui/home_widget.ui
+++ b/plagdef/gui/ui/home_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>506</width>
-                <height>386</height>
+                <width>690</width>
+                <height>494</height>
             </rect>
         </property>
         <property name="styleSheet">
@@ -533,6 +533,16 @@
                                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span
                                     style=&quot; font-size:12pt; color:#ffffff;&quot;&gt;{folder_name}&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
                                 </string>
+                            </property>
+                        </widget>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                        <widget class="QCheckBox" name="recursive_check_box">
+                            <property name="styleSheet">
+                                <string notr="true">color: rgb(255, 255, 255);</string>
+                            </property>
+                            <property name="text">
+                                <string>Include subfolders</string>
                             </property>
                         </widget>
                     </item>
