--- a/plagdef/gui/ui/results_widget.ui
+++ b/plagdef/gui/ui/results_widget.ui
@@ -32,6 +32,151 @@
             </item>
             <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QTableView" name="results_table">
+                    <property name="palette">
+                        <palette>
+                            <active>
+                                <colorrole role="Button">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Base">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Window">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Highlight">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>109</red>
+                                            <green>119</green>
+                                            <blue>130</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="HighlightedText">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>0</red>
+                                            <green>0</green>
+                                            <blue>0</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                            </active>
+                            <inactive>
+                                <colorrole role="Button">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Base">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Window">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Highlight">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>109</red>
+                                            <green>119</green>
+                                            <blue>130</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="HighlightedText">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>0</red>
+                                            <green>0</green>
+                                            <blue>0</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                            </inactive>
+                            <disabled>
+                                <colorrole role="Button">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Base">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Window">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>77</red>
+                                            <green>80</green>
+                                            <blue>87</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="Highlight">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>0</red>
+                                            <green>120</green>
+                                            <blue>215</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                                <colorrole role="HighlightedText">
+                                    <brush brushstyle="SolidPattern">
+                                        <color alpha="255">
+                                            <red>0</red>
+                                            <green>0</green>
+                                            <blue>0</blue>
+                                        </color>
+                                    </brush>
+                                </colorrole>
+                            </disabled>
+                        </palette>
+                    </property>
                     <property name="frameShape">
                         <enum>QFrame::NoFrame</enum>
                     </property>
