--- a/plagdef/gui/ui/main_window.ui
+++ b/plagdef/gui/ui/main_window.ui
@@ -7,7 +7,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>655</width>
-                <height>430</height>
+                <height>520</height>
             </rect>
         </property>
         <property name="sizePolicy">
@@ -19,13 +19,13 @@
         <property name="minimumSize">
             <size>
                 <width>655</width>
-                <height>430</height>
+                <height>520</height>
             </size>
         </property>
         <property name="maximumSize">
             <size>
                 <width>655</width>
-                <height>430</height>
+                <height>520</height>
             </size>
         </property>
         <property name="windowTitle">
@@ -54,67 +54,10 @@
             </property>
             <layout class="QVBoxLayout" name="verticalLayout">
                 <item>
-                    <spacer name="top_spacer">
-                        <property name="orientation">
-                            <enum>Qt::Vertical</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>QSizePolicy::Minimum</enum>
-                        </property>
-                        <property name="sizeHint" stdset="0">
-                            <size>
-                                <width>20</width>
-                                <height>30</height>
-                            </size>
-                        </property>
-                    </spacer>
-                </item>
-                <item>
-                    <widget class="QLabel" name="logo_label">
-                        <property name="sizePolicy">
-                            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                                <horstretch>0</horstretch>
-                                <verstretch>0</verstretch>
-                            </sizepolicy>
-                        </property>
-                        <property name="minimumSize">
-                            <size>
-                                <width>0</width>
-                                <height>43</height>
-                            </size>
-                        </property>
-                        <property name="maximumSize">
-                            <size>
-                                <width>16777215</width>
-                                <height>16777215</height>
-                            </size>
-                        </property>
-                        <property name="text">
-                            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/logo.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                        </property>
-                    </widget>
-                </item>
-                <item>
-                    <spacer name="logo_stacked_widget_spacer">
-                        <property name="orientation">
-                            <enum>Qt::Vertical</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>QSizePolicy::MinimumExpanding</enum>
-                        </property>
-                        <property name="sizeHint" stdset="0">
-                            <size>
-                                <width>20</width>
-                                <height>40</height>
-                            </size>
-                        </property>
-                    </spacer>
-                </item>
-                <item>
                     <widget class="QStackedWidget" name="stacked_widget"/>
                 </item>
                 <item>
-                    <spacer name="bottom_spacer">
+                    <spacer name="verticalSpacer">
                         <property name="orientation">
                             <enum>Qt::Vertical</enum>
                         </property>
