--- a/plagdef/gui/ui/error_widget.ui
+++ b/plagdef/gui/ui/error_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>250</width>
-                <height>270</height>
+                <width>536</width>
+                <height>343</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -17,7 +17,61 @@
             <string notr="true">background-color: rgb(77, 80, 87);</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
-            <item alignment="Qt::AlignHCenter">
+            <item>
+                <spacer name="top_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item>
+                <widget class="QLabel" name="logo_label">
+                    <property name="sizePolicy">
+                        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                        <size>
+                            <width>0</width>
+                            <height>43</height>
+                        </size>
+                    </property>
+                    <property name="maximumSize">
+                        <size>
+                            <width>16777215</width>
+                            <height>16777215</height>
+                        </size>
+                    </property>
+                    <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/logo.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    </property>
+                </widget>
+            </item>
+            <item>
+                <spacer name="logo_error_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Fixed</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>30</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QLabel" name="error_label">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -41,7 +95,7 @@
                     </property>
                 </widget>
             </item>
-            <item>
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QLabel" name="error_msg_label">
                     <property name="frameShape">
                         <enum>QFrame::NoFrame</enum>
@@ -56,7 +110,7 @@
                     </property>
                 </widget>
             </item>
-            <item alignment="Qt::AlignHCenter">
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QPushButton" name="again_button_err">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
