--- a/plagdef/gui/ui/home_widget.ui
+++ b/plagdef/gui/ui/home_widget.ui
@@ -6,7 +6,7 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>825</width>
+                <width>817</width>
                 <height>613</height>
             </rect>
         </property>
@@ -161,7 +161,7 @@
                 </layout>
             </item>
             <item>
-                <spacer name="verticalSpacer">
+                <spacer name="lang_heading_spacer">
                     <property name="orientation">
                         <enum>Qt::Vertical</enum>
                     </property>
@@ -202,7 +202,7 @@
                 </widget>
             </item>
             <item>
-                <spacer name="lang_inputs_spacer">
+                <spacer name="heading_inputs_spacer">
                     <property name="orientation">
                         <enum>Qt::Vertical</enum>
                     </property>
@@ -870,6 +870,19 @@
                         </spacer>
                     </item>
                 </layout>
+            </item>
+            <item>
+                <spacer name="bottom_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
             </item>
         </layout>
     </widget>
