--- a/plagdef/gui/ui/loading_widget.ui
+++ b/plagdef/gui/ui/loading_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>247</width>
-                <height>232</height>
+                <width>616</width>
+                <height>368</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -17,6 +17,63 @@
             <string notr="true">background-color: rgb(77, 80, 87);</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
+            <item>
+                <spacer name="top_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Expanding</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item>
+                <widget class="QLabel" name="logo_label">
+                    <property name="sizePolicy">
+                        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                        <size>
+                            <width>0</width>
+                            <height>43</height>
+                        </size>
+                    </property>
+                    <property name="maximumSize">
+                        <size>
+                            <width>16777215</width>
+                            <height>16777215</height>
+                        </size>
+                    </property>
+                    <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/logo.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    </property>
+                </widget>
+            </item>
+            <item>
+                <spacer name="logo_loading_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Fixed</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>30</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
             <item>
                 <layout class="QHBoxLayout" name="loading_layout">
                     <item>
@@ -32,7 +89,7 @@
                             </property>
                         </spacer>
                     </item>
-                    <item>
+                    <item alignment="Qt::AlignTop">
                         <widget class="QLabel" name="loading_movie_label">
                             <property name="sizePolicy">
                                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -69,7 +126,7 @@
                     </item>
                 </layout>
             </item>
-            <item>
+            <item alignment="Qt::AlignTop">
                 <widget class="QLabel" name="loading_label">
                     <property name="text">
                         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span
@@ -94,6 +151,8 @@
             </item>
         </layout>
     </widget>
-    <resources/>
+    <resources>
+        <include location="../res/resources.qrc"/>
+    </resources>
     <connections/>
 </ui>
