--- a/plagdef/gui/ui/no_results_widget.ui
+++ b/plagdef/gui/ui/no_results_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>181</width>
-                <height>195</height>
+                <width>461</width>
+                <height>330</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -18,6 +18,63 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
             <item>
+                <spacer name="top_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Expanding</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item>
+                <widget class="QLabel" name="logo_label">
+                    <property name="sizePolicy">
+                        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                        <size>
+                            <width>0</width>
+                            <height>43</height>
+                        </size>
+                    </property>
+                    <property name="maximumSize">
+                        <size>
+                            <width>16777215</width>
+                            <height>16777215</height>
+                        </size>
+                    </property>
+                    <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/logo.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    </property>
+                </widget>
+            </item>
+            <item>
+                <spacer name="logo_msg_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Fixed</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>30</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QLabel" name="done_label">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -41,7 +98,7 @@
                     </property>
                 </widget>
             </item>
-            <item>
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QLabel" name="none_found_label">
                     <property name="text">
                         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span
@@ -50,7 +107,7 @@
                     </property>
                 </widget>
             </item>
-            <item alignment="Qt::AlignHCenter">
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QPushButton" name="again_button_no_res">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -86,10 +143,13 @@
                     <property name="orientation">
                         <enum>Qt::Vertical</enum>
                     </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Expanding</enum>
+                    </property>
                     <property name="sizeHint" stdset="0">
                         <size>
                             <width>20</width>
-                            <height>10</height>
+                            <height>40</height>
                         </size>
                     </property>
                 </spacer>
