--- a/plagdef/gui/ui/results_widget.ui
+++ b/plagdef/gui/ui/results_widget.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>608</width>
-                <height>191</height>
+                <width>726</width>
+                <height>366</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -17,7 +17,61 @@
             <string notr="true">background-color: rgb(77, 80, 87);</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
+            <item>
+                <spacer name="top_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
             <item alignment="Qt::AlignHCenter">
+                <widget class="QLabel" name="logo_label">
+                    <property name="sizePolicy">
+                        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                        <size>
+                            <width>0</width>
+                            <height>43</height>
+                        </size>
+                    </property>
+                    <property name="maximumSize">
+                        <size>
+                            <width>16777215</width>
+                            <height>16777215</height>
+                        </size>
+                    </property>
+                    <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/logo.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                    </property>
+                </widget>
+            </item>
+            <item>
+                <spacer name="logo_heading_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Fixed</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>30</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item alignment="Qt::AlignHCenter|Qt::AlignTop">
                 <widget class="QLabel" name="doc_pairs_label">
                     <property name="styleSheet">
                         <string notr="true">color: rgb(255, 255, 255);
@@ -242,13 +296,15 @@
                     <property name="sizeHint" stdset="0">
                         <size>
                             <width>20</width>
-                            <height>65</height>
+                            <height>40</height>
                         </size>
                     </property>
                 </spacer>
             </item>
         </layout>
     </widget>
-    <resources/>
+    <resources>
+        <include location="../res/resources.qrc"/>
+    </resources>
     <connections/>
 </ui>
