--- a/plagdef/gui/ui/home_widget.ui
+++ b/plagdef/gui/ui/home_widget.ui
@@ -74,7 +74,7 @@
         <bool>true</bool>
        </property>
        <property name="checked">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="autoDefault">
         <bool>false</bool>
