--- a/plagdef/gui/ui/matches_dialog.ui
+++ b/plagdef/gui/ui/matches_dialog.ui
@@ -252,7 +252,7 @@
                         </size>
                     </property>
                     <property name="toolTip">
-                        <string>Export all matches as JSON reports.</string>
+                        <string/>
                     </property>
                     <property name="styleSheet">
                         <string notr="true">QPushButton {
